@@ -384,12 +384,15 @@ const EMPTY_OPTS = {}
 //   - `opts.response` - HTTP response (node `ServerResponse` instance) to use
 //     for `error.context.response`.
 //   - `opts.handled` - Boolean indicating if this exception was handled by
-//     application code.
+//     application code. Default true. Setting to `false` also results in the
+//     error being flushed to APM server as soon as it is processed.
 //   - `opts.captureAttributes` - Boolean. Default true. Set to false to *not*
 //     include properties of `err` as attributes on the APM error event.
 //   - `opts.skipOutcome` - Boolean. Default false. Set to true to not have
 //     this captured error set `<currentSpan>.outcome = failure`.
-// - `cb` is a callback `function (captureErr, apmErrorIdString)`
+// - `cb` is a callback `function (captureErr, apmErrorIdString)`. If provided,
+//   the error will be flushed to APM server as soon as it is processed, and
+//   `cb` will be called when that send is complete.
 Agent.prototype.captureError = function (err, opts, cb) {
   if (typeof opts === 'function') {
     cb = opts
@@ -505,11 +508,16 @@ Agent.prototype.captureError = function (err, opts, cb) {
       if (agent._transport) {
         agent.logger.info('Sending error to Elastic APM: %o', { id })
         agent._transport.sendError(apmError, function () {
-          agent.flush(function (flushErr) {
-            if (cb) {
-              cb(flushErr, id)
-            }
-          })
+          if (!handled || cb) {
+            // Immediately flush *unhandled* errors -- those from
+            // `uncaughtException` -- on the assumption that the process may
+            // soon crash. Also flush when a `cb` is provided.
+            agent.flush(function (flushErr) {
+              if (cb) {
+                cb(flushErr, id)
+              }
+            })
+          }
         })
       } else if (cb) {
         // TODO: Swallow this error just as it's done in agent.flush()?
